# tethys

./: .gitignore  CLAUDE.md  Cargo.toml  GITHUB_INTEGRATION_PLAN.md  PLAN.md  README.md  TASKS.md  package.json  pnpm-lock.yaml
crates/tethys-hook/: Cargo.toml
crates/tethys-hook/src/: main.rs
src/: App.css  App.tsx  DevServerControls.tsx  ErrorOverlay.tsx  GithubAuthFooter.tsx  GithubChip.tsx  JobLogModal.tsx  JobLogPane.tsx  SessionTerminal.tsx  SettingsDialog.tsx  Sidebar.tsx  SystemStatus.tsx  main.tsx  theme.ts  types.ts  useBackendJob.ts  useTauriEvent.ts  workspaceDerived.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: claude.rs  claude_local.rs  commands.rs  dev_servers.rs  error.rs  git.rs  hook_install.rs  hook_listener.rs  inprogress.rs  job.rs  lib.rs  logging.rs  main.rs  memory_poller.rs  paths.rs  purge.rs  reconcile.rs  registry.rs  sessions.rs  setup.rs  setup_warmer.rs  shell.rs  state.rs  store.rs  theme.rs  tmux.rs
src-tauri/src/dev_orchestrator/: config.rs  down.rs  env_files.rs  main_stack.rs  mod.rs  override_file.rs  ports.rs  pressure.rs  scrub.rs  stats.rs
src-tauri/src/github/: client.rs  mod.rs  poller.rs  remote_url.rs  status.rs
