[package]
name = "tethys"
version = "0.1.0"
description = "Tethys — manage multiple Claude Code sessions across git worktrees"
authors = ["Ryan Baxley <ryan.baxley@newlantern.ai>"]
edition = "2021"

[lib]
name = "tethys_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-single-instance = "2"
tauri-plugin-dialog = "2"
plist = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "fs", "process", "io-util", "net"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"
toml = "0.9"
schemars = "1"
portable-pty = "0.9"
bytes = "1"
fs2 = "0.4"
